compiler/testData/diagnostics/tests/scopes/ImportsUselessSimpleImport2.kt
// FILE:a.kt
package a

import <!USELESS_SIMPLE_IMPORT!>b<!>

// FILE:b.kt
package b

class B()
